--- a/每日一题/630.课程表III(贪心).md
+++ b/每日一题/630.课程表III(贪心).md
@@ -14,7 +14,7 @@ class Solution(object):
         return ans
 ```
 
-当测试案例为$[[5,5],[2,6],[4,6]]$时无法通过。
+当测试案例为$$[[5,5],[2,6],[4,6]]$$时无法通过。
 
 贪是贪了，但还不够贪
 
@@ -26,11 +26,11 @@ class Solution(object):
 
 ### python的heapq模块
 
-$heap\quad n.$(凌乱的)一堆
+$$heap\quad n.$$(凌乱的)一堆
 
-**python默认小顶堆$
+**python默认小顶堆**
 
-#### $heapq.heappush(heap, item)$
+#### $$heapq.heappush(heap, item)$$
 
 ```python
 import heapd
@@ -47,7 +47,7 @@ print(q)
 [1, 3, 2]
 ```
 
-#### $heapq.heapify(q)$
+#### $$heapq.heapify(q)$$
 
 ```python
 q = [1, 2, 3, 5, 1, 5, 8, 9, 6]
@@ -57,7 +57,7 @@ print(q)
 [1, 1, 3, 5, 2, 5, 8, 9, 6]
 ```
 
-#### $heapq.heappop(heap)$
+#### $$heapq.heappop(heap)$$
 
 ```python
 print(heapq.heappop(q))
@@ -98,7 +98,7 @@ class Solution(object):
 
 内存消耗：16.8 MB, 在所有 Python 提交中击败了57.14%的用户
 
-**时间复杂度：$O(n\log n+n\log n)=O(n\log)$**
+**时间复杂度：$$O(n\log n+n\log n)=O(n\log)$$**
 
-优先队列的单次操作：$O(\log n)$，取$n$次，也是$O(n\log n)$
+优先队列的单次操作：$$O(\log n)$$，取$$n$$次，也是$$O(n\log n)$$
 
